# customer_chatbot_voice

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TRANSPARENCY_FAQ.md  api_logs.txt  apilogs.txt  apilogs2.txt  azure.yaml
.design/: ADR-TEMPLATE.md  DESIGN-DOC-TEMPLATE.md  README.template.md  hands-on-guide.md
.github/: PULL_REQUEST_TEMPLATE.md  SDL-with-Copilot-and-Azure.md  copilot-instructions.md  pr-form-validation.workflow.yml  reference-catalog.md
src/CustomerChatbotAPI/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure_cicd.yaml  pyproject.toml
src/CustomerChatbotAPI/app/: __init__.py  application.py  main.py
src/CustomerChatbotAPI/app/agents/: __init__.py  chat_agent.py  policy_agent.py  product_agent.py
src/CustomerChatbotAPI/app/domain/: __init__.py  entities.py  enums.py  models.py
src/CustomerChatbotAPI/app/infrastructure/: __init__.py  auth_middleware.py  repositories.py
src/CustomerChatbotAPI/app/routers/: chat_router.py  http_probes.py  product_router.py  voice_router.py
src/CustomerChatbotAPI/app/services/: __init__.py  chatbot_orchestrator.py  policy_service.py  product_service.py  voice_service.py
src/CustomerChatbotAPI/tests/: conftest.py
src/CustomerChatbotAPI/tests/integration/: conftest.py  test_http_probes.py
src/CustomerChatbotAPI/tests/unit/: conftest.py  test_agents.py  test_auth_middleware.py  test_chatbot_orchestrator.py  test_entities.py  test_enums.py  test_models.py  test_policy_service.py  test_product_service.py  test_voice_service.py
(+80 files in other folders)
